# Project-management-Backend

./: .gitignore  pyproject.toml  pytest.ini
Authentication/: encryption.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
Authentication/migrations/: 0001_initial.py
Employee/: admin.py  models.py  serializers.py  urls.py  views.py
Hr/: apps.py  models.py  tests.py  urls.py  views.py
Hr/migrations/: 0001_initial.py
ProjectManagement/: asgi.py  settings.py  urls.py
chat/: admin.py  consumers.py  models.py  routing.py
project/: admin.py  models.py  serializer.py  signals.py  tests.py  urls.py  views.py
